// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CREATE_COHORT_ERROR 2`] = `
Array [
  Object {
    "error": Object {
      "error": [Error: something unexpected happened on the server],
    },
    "type": "CREATE_COHORT_ERROR",
  },
]
`;

exports[`CREATE_COHORT_SUCCESS 2`] = `
Array [
  Object {
    "cohort": Object {
      "created_at": "2020-02-31T14:01:02.656Z",
      "deleted_at": null,
      "id": 2,
      "is_archived": false,
      "name": "Fake Cohort",
      "role": "owner",
      "roles": Array [
        "super",
        "facilitator",
      ],
      "runs": Array [],
      "scenarios": Array [],
      "updated_at": null,
      "users": Array [
        Object {
          "email": "super@email.com",
          "id": 999,
          "is_anonymous": false,
          "is_super": true,
          "roles": Array [
            "super",
            "facilitator",
          ],
          "username": "super",
        },
      ],
      "usersById": Object {
        "999": Object {
          "email": "super@email.com",
          "id": 999,
          "is_anonymous": false,
          "is_super": true,
          "roles": Array [
            "super",
            "facilitator",
          ],
          "username": "super",
        },
      },
    },
    "type": "CREATE_COHORT_SUCCESS",
  },
]
`;

exports[`GET_COHORT_ERROR 2`] = `
Array [
  Object {
    "error": Object {
      "error": [Error: something unexpected happened on the server],
    },
    "type": "GET_COHORT_ERROR",
  },
]
`;

exports[`GET_COHORT_SUCCESS Invalid Cohort id 1`] = `Array []`;

exports[`GET_COHORT_SUCCESS Receives a cohort missing an id 2`] = `
Array [
  Object {
    "cohort": Object {},
    "type": "GET_COHORT_SUCCESS",
  },
]
`;

exports[`GET_COHORT_SUCCESS Receives an undefined cohort 2`] = `
Array [
  Object {
    "cohort": undefined,
    "type": "GET_COHORT_SUCCESS",
  },
]
`;

exports[`GET_COHORT_SUCCESS Valid Cohort id 2`] = `
Array [
  Object {
    "cohort": Object {
      "created_at": "2020-03-24T14:52:28.429Z",
      "deleted_at": null,
      "id": 1,
      "is_archived": false,
      "name": "First Cohort",
      "runs": Array [
        Object {
          "cohort_id": 1,
          "consent_acknowledged_by_user": true,
          "consent_granted_by_user": true,
          "consent_id": 8,
          "created_at": "2020-03-28T19:44:03.069Z",
          "ended_at": "2020-03-31T17:01:43.128Z",
          "id": 11,
          "referrer_params": null,
          "run_id": 11,
          "scenario_id": 7,
          "updated_at": "2020-03-31T17:01:43.139Z",
          "user_id": 2,
        },
        Object {
          "cohort_id": 1,
          "consent_acknowledged_by_user": true,
          "consent_granted_by_user": true,
          "consent_id": 8,
          "created_at": "2020-03-31T17:01:52.902Z",
          "ended_at": "2020-03-31T17:02:00.296Z",
          "id": 28,
          "referrer_params": null,
          "run_id": 28,
          "scenario_id": 7,
          "updated_at": "2020-03-31T17:02:00.309Z",
          "user_id": 2,
        },
        Object {
          "cohort_id": 1,
          "consent_acknowledged_by_user": true,
          "consent_granted_by_user": true,
          "consent_id": 8,
          "created_at": "2020-03-31T17:02:51.357Z",
          "ended_at": "2020-03-31T17:02:57.043Z",
          "id": 29,
          "referrer_params": null,
          "run_id": 29,
          "scenario_id": 7,
          "updated_at": "2020-03-31T17:02:57.054Z",
          "user_id": 2,
        },
        Object {
          "cohort_id": 1,
          "consent_acknowledged_by_user": true,
          "consent_granted_by_user": true,
          "consent_id": 8,
          "created_at": "2020-03-31T17:05:34.501Z",
          "ended_at": "2020-03-31T17:05:39.136Z",
          "id": 30,
          "referrer_params": null,
          "run_id": 30,
          "scenario_id": 7,
          "updated_at": "2020-03-31T17:05:39.144Z",
          "user_id": 2,
        },
        Object {
          "cohort_id": 1,
          "consent_acknowledged_by_user": true,
          "consent_granted_by_user": true,
          "consent_id": 8,
          "created_at": "2020-03-31T17:07:15.447Z",
          "ended_at": "2020-03-31T17:07:20.321Z",
          "id": 31,
          "referrer_params": null,
          "run_id": 31,
          "scenario_id": 7,
          "updated_at": "2020-03-31T17:07:20.331Z",
          "user_id": 2,
        },
      ],
      "scenarios": Array [
        7,
        1,
        9,
        8,
      ],
      "updated_at": null,
      "users": Array [
        Object {
          "cohort_id": 1,
          "email": "super@email.com",
          "id": 999,
          "is_anonymous": false,
          "is_super": true,
          "roles": Array [
            "super",
            "facilitator",
          ],
          "username": "super",
        },
      ],
      "usersById": Object {
        "999": Object {
          "cohort_id": 1,
          "email": "super@email.com",
          "id": 999,
          "is_anonymous": false,
          "is_super": true,
          "roles": Array [
            "super",
            "facilitator",
          ],
          "username": "super",
        },
      },
    },
    "type": "GET_COHORT_SUCCESS",
  },
]
`;

exports[`GET_COHORTS_COUNT_SUCCESS 2`] = `
Array [
  Object {
    "count": 1,
    "type": "GET_COHORTS_COUNT_SUCCESS",
  },
]
`;

exports[`SET_COHORT_ERROR 2`] = `
Array [
  Object {
    "error": Object {
      "error": [Error: something unexpected happened on the server],
    },
    "type": "SET_COHORT_ERROR",
  },
]
`;

exports[`SET_COHORT_SCENARIOS_ERROR 2`] = `
Array [
  Object {
    "error": Object {
      "error": [Error: something unexpected happened on the server],
    },
    "type": "SET_COHORT_SCENARIOS_ERROR",
  },
]
`;

exports[`SET_COHORT_SCENARIOS_SUCCESS 2`] = `
Array [
  Object {
    "cohort": Object {
      "created_at": "2020-03-24T14:52:28.429Z",
      "deleted_at": null,
      "id": 1,
      "is_archived": false,
      "name": "First Cohort",
      "runs": Array [
        Object {
          "cohort_id": 1,
          "consent_acknowledged_by_user": true,
          "consent_granted_by_user": true,
          "consent_id": 8,
          "created_at": "2020-03-28T19:44:03.069Z",
          "ended_at": "2020-03-31T17:01:43.128Z",
          "id": 11,
          "referrer_params": null,
          "run_id": 11,
          "scenario_id": 7,
          "updated_at": "2020-03-31T17:01:43.139Z",
          "user_id": 2,
        },
        Object {
          "cohort_id": 1,
          "consent_acknowledged_by_user": true,
          "consent_granted_by_user": true,
          "consent_id": 8,
          "created_at": "2020-03-31T17:01:52.902Z",
          "ended_at": "2020-03-31T17:02:00.296Z",
          "id": 28,
          "referrer_params": null,
          "run_id": 28,
          "scenario_id": 7,
          "updated_at": "2020-03-31T17:02:00.309Z",
          "user_id": 2,
        },
        Object {
          "cohort_id": 1,
          "consent_acknowledged_by_user": true,
          "consent_granted_by_user": true,
          "consent_id": 8,
          "created_at": "2020-03-31T17:02:51.357Z",
          "ended_at": "2020-03-31T17:02:57.043Z",
          "id": 29,
          "referrer_params": null,
          "run_id": 29,
          "scenario_id": 7,
          "updated_at": "2020-03-31T17:02:57.054Z",
          "user_id": 2,
        },
        Object {
          "cohort_id": 1,
          "consent_acknowledged_by_user": true,
          "consent_granted_by_user": true,
          "consent_id": 8,
          "created_at": "2020-03-31T17:05:34.501Z",
          "ended_at": "2020-03-31T17:05:39.136Z",
          "id": 30,
          "referrer_params": null,
          "run_id": 30,
          "scenario_id": 7,
          "updated_at": "2020-03-31T17:05:39.144Z",
          "user_id": 2,
        },
        Object {
          "cohort_id": 1,
          "consent_acknowledged_by_user": true,
          "consent_granted_by_user": true,
          "consent_id": 8,
          "created_at": "2020-03-31T17:07:15.447Z",
          "ended_at": "2020-03-31T17:07:20.321Z",
          "id": 31,
          "referrer_params": null,
          "run_id": 31,
          "scenario_id": 7,
          "updated_at": "2020-03-31T17:07:20.331Z",
          "user_id": 2,
        },
      ],
      "scenarios": Array [
        7,
        1,
        9,
        8,
      ],
      "updated_at": null,
      "users": Array [
        Object {
          "cohort_id": 1,
          "email": "super@email.com",
          "id": 999,
          "is_anonymous": false,
          "is_super": true,
          "roles": Array [
            "super",
            "facilitator",
          ],
          "username": "super",
        },
      ],
      "usersById": Object {
        "999": Object {
          "cohort_id": 1,
          "email": "super@email.com",
          "id": 999,
          "is_anonymous": false,
          "is_super": true,
          "roles": Array [
            "super",
            "facilitator",
          ],
          "username": "super",
        },
      },
    },
    "type": "SET_COHORT_SCENARIOS_SUCCESS",
  },
]
`;

exports[`SET_COHORT_SUCCESS deleted_at 2`] = `
Array [
  Object {
    "cohort": Object {
      "created_at": "2020-03-24T14:52:28.429Z",
      "deleted_at": "2020-01-01T00:00:00.000Z",
      "id": 1,
      "is_archived": false,
      "name": "First Cohort",
      "runs": Array [
        Object {
          "cohort_id": 1,
          "consent_acknowledged_by_user": true,
          "consent_granted_by_user": true,
          "consent_id": 8,
          "created_at": "2020-03-28T19:44:03.069Z",
          "ended_at": "2020-03-31T17:01:43.128Z",
          "id": 11,
          "referrer_params": null,
          "run_id": 11,
          "scenario_id": 7,
          "updated_at": "2020-03-31T17:01:43.139Z",
          "user_id": 2,
        },
        Object {
          "cohort_id": 1,
          "consent_acknowledged_by_user": true,
          "consent_granted_by_user": true,
          "consent_id": 8,
          "created_at": "2020-03-31T17:01:52.902Z",
          "ended_at": "2020-03-31T17:02:00.296Z",
          "id": 28,
          "referrer_params": null,
          "run_id": 28,
          "scenario_id": 7,
          "updated_at": "2020-03-31T17:02:00.309Z",
          "user_id": 2,
        },
        Object {
          "cohort_id": 1,
          "consent_acknowledged_by_user": true,
          "consent_granted_by_user": true,
          "consent_id": 8,
          "created_at": "2020-03-31T17:02:51.357Z",
          "ended_at": "2020-03-31T17:02:57.043Z",
          "id": 29,
          "referrer_params": null,
          "run_id": 29,
          "scenario_id": 7,
          "updated_at": "2020-03-31T17:02:57.054Z",
          "user_id": 2,
        },
        Object {
          "cohort_id": 1,
          "consent_acknowledged_by_user": true,
          "consent_granted_by_user": true,
          "consent_id": 8,
          "created_at": "2020-03-31T17:05:34.501Z",
          "ended_at": "2020-03-31T17:05:39.136Z",
          "id": 30,
          "referrer_params": null,
          "run_id": 30,
          "scenario_id": 7,
          "updated_at": "2020-03-31T17:05:39.144Z",
          "user_id": 2,
        },
        Object {
          "cohort_id": 1,
          "consent_acknowledged_by_user": true,
          "consent_granted_by_user": true,
          "consent_id": 8,
          "created_at": "2020-03-31T17:07:15.447Z",
          "ended_at": "2020-03-31T17:07:20.321Z",
          "id": 31,
          "referrer_params": null,
          "run_id": 31,
          "scenario_id": 7,
          "updated_at": "2020-03-31T17:07:20.331Z",
          "user_id": 2,
        },
      ],
      "scenarios": Array [
        7,
        1,
        9,
        8,
      ],
      "updated_at": null,
      "users": Array [
        Object {
          "cohort_id": 1,
          "email": "super@email.com",
          "id": 999,
          "is_anonymous": false,
          "is_super": true,
          "roles": Array [
            "super",
            "facilitator",
          ],
          "username": "super",
        },
      ],
      "usersById": Object {
        "999": Object {
          "cohort_id": 1,
          "email": "super@email.com",
          "id": 999,
          "is_anonymous": false,
          "is_super": true,
          "roles": Array [
            "super",
            "facilitator",
          ],
          "username": "super",
        },
      },
    },
    "type": "SET_COHORT_SUCCESS",
  },
]
`;

exports[`SET_COHORT_SUCCESS name 2`] = `
Array [
  Object {
    "cohort": Object {
      "created_at": "2020-03-24T14:52:28.429Z",
      "deleted_at": null,
      "id": 1,
      "is_archived": false,
      "name": "A New Name!",
      "runs": Array [
        Object {
          "cohort_id": 1,
          "consent_acknowledged_by_user": true,
          "consent_granted_by_user": true,
          "consent_id": 8,
          "created_at": "2020-03-28T19:44:03.069Z",
          "ended_at": "2020-03-31T17:01:43.128Z",
          "id": 11,
          "referrer_params": null,
          "run_id": 11,
          "scenario_id": 7,
          "updated_at": "2020-03-31T17:01:43.139Z",
          "user_id": 2,
        },
        Object {
          "cohort_id": 1,
          "consent_acknowledged_by_user": true,
          "consent_granted_by_user": true,
          "consent_id": 8,
          "created_at": "2020-03-31T17:01:52.902Z",
          "ended_at": "2020-03-31T17:02:00.296Z",
          "id": 28,
          "referrer_params": null,
          "run_id": 28,
          "scenario_id": 7,
          "updated_at": "2020-03-31T17:02:00.309Z",
          "user_id": 2,
        },
        Object {
          "cohort_id": 1,
          "consent_acknowledged_by_user": true,
          "consent_granted_by_user": true,
          "consent_id": 8,
          "created_at": "2020-03-31T17:02:51.357Z",
          "ended_at": "2020-03-31T17:02:57.043Z",
          "id": 29,
          "referrer_params": null,
          "run_id": 29,
          "scenario_id": 7,
          "updated_at": "2020-03-31T17:02:57.054Z",
          "user_id": 2,
        },
        Object {
          "cohort_id": 1,
          "consent_acknowledged_by_user": true,
          "consent_granted_by_user": true,
          "consent_id": 8,
          "created_at": "2020-03-31T17:05:34.501Z",
          "ended_at": "2020-03-31T17:05:39.136Z",
          "id": 30,
          "referrer_params": null,
          "run_id": 30,
          "scenario_id": 7,
          "updated_at": "2020-03-31T17:05:39.144Z",
          "user_id": 2,
        },
        Object {
          "cohort_id": 1,
          "consent_acknowledged_by_user": true,
          "consent_granted_by_user": true,
          "consent_id": 8,
          "created_at": "2020-03-31T17:07:15.447Z",
          "ended_at": "2020-03-31T17:07:20.321Z",
          "id": 31,
          "referrer_params": null,
          "run_id": 31,
          "scenario_id": 7,
          "updated_at": "2020-03-31T17:07:20.331Z",
          "user_id": 2,
        },
      ],
      "scenarios": Array [
        7,
        1,
        9,
        8,
      ],
      "updated_at": null,
      "users": Array [
        Object {
          "cohort_id": 1,
          "email": "super@email.com",
          "id": 999,
          "is_anonymous": false,
          "is_super": true,
          "roles": Array [
            "super",
            "facilitator",
          ],
          "username": "super",
        },
      ],
      "usersById": Object {
        "999": Object {
          "cohort_id": 1,
          "email": "super@email.com",
          "id": 999,
          "is_anonymous": false,
          "is_super": true,
          "roles": Array [
            "super",
            "facilitator",
          ],
          "username": "super",
        },
      },
    },
    "type": "SET_COHORT_SUCCESS",
  },
]
`;

exports[`SET_COHORT_SUCCESS name, deleted_at 2`] = `
Array [
  Object {
    "cohort": Object {
      "created_at": "2020-03-24T14:52:28.429Z",
      "deleted_at": "2020-01-01T00:00:00.000Z",
      "id": 1,
      "is_archived": false,
      "name": "Some other name",
      "runs": Array [
        Object {
          "cohort_id": 1,
          "consent_acknowledged_by_user": true,
          "consent_granted_by_user": true,
          "consent_id": 8,
          "created_at": "2020-03-28T19:44:03.069Z",
          "ended_at": "2020-03-31T17:01:43.128Z",
          "id": 11,
          "referrer_params": null,
          "run_id": 11,
          "scenario_id": 7,
          "updated_at": "2020-03-31T17:01:43.139Z",
          "user_id": 2,
        },
        Object {
          "cohort_id": 1,
          "consent_acknowledged_by_user": true,
          "consent_granted_by_user": true,
          "consent_id": 8,
          "created_at": "2020-03-31T17:01:52.902Z",
          "ended_at": "2020-03-31T17:02:00.296Z",
          "id": 28,
          "referrer_params": null,
          "run_id": 28,
          "scenario_id": 7,
          "updated_at": "2020-03-31T17:02:00.309Z",
          "user_id": 2,
        },
        Object {
          "cohort_id": 1,
          "consent_acknowledged_by_user": true,
          "consent_granted_by_user": true,
          "consent_id": 8,
          "created_at": "2020-03-31T17:02:51.357Z",
          "ended_at": "2020-03-31T17:02:57.043Z",
          "id": 29,
          "referrer_params": null,
          "run_id": 29,
          "scenario_id": 7,
          "updated_at": "2020-03-31T17:02:57.054Z",
          "user_id": 2,
        },
        Object {
          "cohort_id": 1,
          "consent_acknowledged_by_user": true,
          "consent_granted_by_user": true,
          "consent_id": 8,
          "created_at": "2020-03-31T17:05:34.501Z",
          "ended_at": "2020-03-31T17:05:39.136Z",
          "id": 30,
          "referrer_params": null,
          "run_id": 30,
          "scenario_id": 7,
          "updated_at": "2020-03-31T17:05:39.144Z",
          "user_id": 2,
        },
        Object {
          "cohort_id": 1,
          "consent_acknowledged_by_user": true,
          "consent_granted_by_user": true,
          "consent_id": 8,
          "created_at": "2020-03-31T17:07:15.447Z",
          "ended_at": "2020-03-31T17:07:20.321Z",
          "id": 31,
          "referrer_params": null,
          "run_id": 31,
          "scenario_id": 7,
          "updated_at": "2020-03-31T17:07:20.331Z",
          "user_id": 2,
        },
      ],
      "scenarios": Array [
        7,
        1,
        9,
        8,
      ],
      "updated_at": null,
      "users": Array [
        Object {
          "cohort_id": 1,
          "email": "super@email.com",
          "id": 999,
          "is_anonymous": false,
          "is_super": true,
          "roles": Array [
            "super",
            "facilitator",
          ],
          "username": "super",
        },
      ],
      "usersById": Object {
        "999": Object {
          "cohort_id": 1,
          "email": "super@email.com",
          "id": 999,
          "is_anonymous": false,
          "is_super": true,
          "roles": Array [
            "super",
            "facilitator",
          ],
          "username": "super",
        },
      },
    },
    "type": "SET_COHORT_SUCCESS",
  },
]
`;
